Use virtual thread based spec processing